# eigeen-loader-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_package.py  dev_copy_files.py
d3d11/: .gitignore  d3d11.dll.ExportFunctions.txt  dllmain.cpp  generate.py  xmake.lua
eigeen-loader/: Cargo.toml
eigeen-loader/src/: command.rs  core_extension.rs  core_plugin.rs  error.rs  lib.rs  logger.rs  plugin.rs  singleton.rs
eigeen-loader/src/address/: address_records.json  mod.rs
eigeen-loader/src/export/: address.rs  game.rs  logging.rs  mod.rs
eigeen-loader/src/hook/: chat.rs  mh_main.rs  mod.rs
eigeen-loader/src/utility/: game.rs  memory.rs  mod.rs  pattern_scan.rs  string.rs  windows.rs
el-imgui-api/: Cargo.toml
el-imgui-core/mhw-imgui-core/: mhw-imgui-core.sln
el-imgui-core/mhw-imgui-core/dependencies/: eigeen_loader.dll.lib
el-imgui-core/mhw-imgui-core/dependencies/cimgui/: .gitignore  .gitmodules  ALL_BUILD.vcxproj  CMakeLists.txt  (+9 more)
el-imgui-core/mhw-imgui-core/mhw-imgui-core/: HResultHandler.h  PatternScan.cpp  TextureManager.cpp  TextureManager.h  TextureManager11.cpp  TextureManager12.cpp  dllmain.cpp  dti_types.h  mhw-imgui-core.vcxproj  mhw-imgui-core.vcxproj.filters
examples/cpp_example/: plugin.cpp  xmake.lua
include/: API.hpp  eigeen_loader.dll.lib
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/export/: address.rs  core_extension.rs  mod.rs
shared/src/game/: chat.rs  mod.rs
shared/src/utility/: memory.rs
src/: lib.rs  logger.rs
src/game/resource/: quest.rs
src/include/: address.rs  game.rs  logging.rs  mod.rs
(+21 files in other folders)
