[package]
name = "eigeen-loader-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
shared = { path = "./shared" }
log = { workspace = true, features = ["std"] }

[workspace]
resolver = "2"
members = ["eigeen-loader", "shared"]

    [workspace.dependencies]
    safetyhook = { git = "https://github.com/eigeen/safetyhook-rs.git" }
    # safetyhook = { path = "../../safetyhook-pure-rs" }
    log = { version = "0.4" }
    windows = { version = "0.58" }
    thiserror = { version = "2.0" }
    serde = { version = "1.0" }
    serde_json = { version = "1.0" }
