[package]
name = "eigeen-loader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
log = { workspace = true, features = ["std"] }
windows = { workspace = true, features = [
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
safetyhook = { workspace = true }
colored = "2.1"
chrono = "0.4"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
convert_case = "0.6"


[features]
default = []
log_trace = []

